fix alignments

--- a/frontend-nextjs/styles/globals.css
+++ b/frontend-nextjs/styles/globals.css
@@ -23,3 +23,7 @@ a {
   left: 0;
   right: 0;
 }
+
+.fixed-height {
+  height: 17rem;
+}
